# CoGen_Align

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: base.yaml
configs/stage1/: ablation_a1_epoch2.yaml  ablation_a1_epoch3.yaml  ablation_a1_steps_0.yaml  ablation_a1_steps_1000.yaml  ablation_a1_steps_2000.yaml  ablation_a1_steps_500.yaml  ablation_hardneg.yaml  ablation_temperature.yaml  default.yaml  table1_s1_200h.yaml  table1_s1_300h.yaml  table1_s1_400h.yaml  table1_s1_500h.yaml  table1_s1_50h.yaml
configs/stage2/: baseline_100h.yaml  baseline_10h.yaml  baseline_200h.yaml  baseline_300h.yaml  baseline_400h.yaml  baseline_500h.yaml  baseline_50h.yaml  cogen_100h.yaml  cogen_10h.yaml  cogen_200h.yaml  cogen_300h.yaml  cogen_400h.yaml  cogen_500h.yaml  cogen_50h.yaml  common.yaml  default.yaml
configs/sweeps/: warmup_steps.yaml
data/manifests/: README.md
doc/: CoGen_Align_Engineering_Handbook.docx  CoGen_Align_实验设计终稿.md  CoGen_Align_实验设计终稿_v2.md  CoGen_Align_相关工作调研报告.md  CoGen_Align_项目全览.md  Proposal_E_CoGen_Align.docx
scripts/: aggregate_seed_metrics.py  download_librispeech.py  download_llm_modelscope.py  evaluate.py  get_manifests_train.sh  precompute_features.py  prepare_data.sh  run_ablation.sh  run_full_experiment_batch.sh  run_stage1_full_train.sh  run_stage1_train.sh  summarize_outputs.py  test.ipynb  train_stage1.py  train_stage2.py
scripts/analysis/: compute_anisotropy.py  plot_tsne.py  (+2 more)
tests/: test_console_log.py  test_dataset_collator.py  test_experiment_record.py  test_losses.py  test_projector.py  test_train_plots.py
(+32 files in other folders)
